M_18:
1. Agent Database has been added. New module for multi-threaded access. Baseline version.
2. A number of synchronization problems with Id's in Resources and in the Planner discovered and fixed.
3. A plethora of gnats fixes.
4. Support for 'foreach' semantics in NDDL and in the rules engine.
5. Incorporated temporary fix for accessing active tokens in slaves. This will only work for a chronological backtrack.
6. Added some code for getting more precise distance relationships from the temporal advisor.

M_17:
1. First tag in new PLASMA cvs directory.
2. Minor build patches.

MIGRATED:
1. Migrated to PLASMA build structure and cvs directory.

M_16:
?

M_15:
1. Changed CBPlanner so that responsibilities for maintaining open
decisions in sorted order relies on the OpenDecisionManager rather than the
DecisionManager.  The DecisionManager manages events and processes them in
the order they should be processed.   This shouldn't have to change as long
as the planner is a backtracking planner.
2. Measured performance and there has been no degradation and no
perceptible improvement.

M_14:
**** Major Performance Milestone
1. Introduced CBPlanner which responds to PlanDatabase and ConstraintEngine
events to manage decisions directly without Flaws.
2. Moved java nddl parser.
3. Introduced support for Dynamic Objects

M_12:
**** Fixed problems creating Object Decision Points from flaws.
1. Introduced new test cases in Planner module to test backtracking due to
subgoaling.
2. ObjectFlaws now maintain the list of tokens involved in the flaw to ease
decision management.
3. Introduced a flaw decision map to manage map between flaws and
decisions, specifically in the case of multiple object decisions per object
flaw.
4. Cleaned up planner module tests
5. Removed redirection to file logging on SamplePlanDatabase.hh

M_11:
**** Fixed problems integrating the Temporal Network.